syntax = "proto3";

package NCloud.NProto;

option java_package = "ru.yandex.cloud.storage.proto";
option go_package = "a.yandex-team.ru/cloud/storage/core/protos";

////////////////////////////////////////////////////////////////////////////////
// Error Flags.

enum EErrorFlag
{
    EF_NONE = 0;
    EF_SILENT = 1;
    // TODO: EF_RETRIABLE, EF_CLIENT
}

////////////////////////////////////////////////////////////////////////////////
// Error description.

message TError
{
    // Error code.
    uint32 Code = 1;

    // Error message.
    string Message = 2;

    // Flags.
    uint32 Flags = 3;
}
